# reddit-content-bot

./: .gitignore  README.md  main.py  media.py  model.py  pyproject.toml  secret.py  transcribe.py  util.py  voice.py
data/: prompt.txt
data/0cb416bc-7587-4c14-a2e7-1a92fe2883af/: story.txt
