[project]
name = "reddit-content-bot"
version = "0.1.0"
description = "A bot to generate content from reddit to be posted on social media."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "praw",
    "pydantic_settings",
    "pydantic",
    "anthropic>=0.67.0",
    "instructor>=1.11.3",
    "elevenlabs>=2.15.0",
    "openai>=1.107.2",
    "openai-whisper>=20250625",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
]
